fixes after fourth check

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -12,7 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: ESLinter
-        uses: actions/setup-node@v2
+
+      - name: Install Node.js
+        - uses: actions/setup-node@v2
+          with:
+            node-version: '14.17.1'
       - run: npm install
+
+      - name: run ESLinter
       - run: make lint
